
- More accurate LIBOR calendars (thanks to Daniele de Francesco.)

- Added DKKLibor, EURLibor, and NZDLibor indexes.

- Added Bombay and Taipei calendars.
