@@ -41,11 +41,17 @@ namespace {
                        #else
                        const std::string&, long,
                        #endif
+                       #ifdef QL_ERROR_FUNCTIONS
                        const std::string& function,
+                       #else
+                       const std::string&,
+                       #endif
                        const std::string& message) {
         std::ostringstream msg;
+        #ifdef QL_ERROR_FUNCTIONS
         if (function != "(unknown)")
             msg << function << ": ";
+        #endif
         #ifdef QL_ERROR_LINES
         msg << "\n  " << file << "(" << line << "): \n";
         #endif
@@ -58,11 +64,13 @@ namespace {
                        const std::string& function,
                        const std::string& message) {
         std::ostringstream msg;
-        #if QL_ERROR_LINES
+        #if defined(QL_ERROR_LINES)
         msg << "\n" << file << ":" << line << ": ";
         #endif
+        #if defined(QL_ERROR_FUNCTIONS)
         if (function != "(unknown)")
             msg << "In function `" << function << "': \n";
+        #endif
         msg << message;
         return msg.str();
     }
